<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/layout_padding_vertical"
    android:paddingLeft="@dimen/layout_inner_padding_horizontal"
    android:paddingRight="@dimen/layout_inner_padding_horizontal"
    android:paddingTop="@dimen/layout_padding_vertical">

    <ImageView
        android:id="@id/avatar"
        android:layout_width="@dimen/size_avatar"
        android:layout_height="@dimen/size_avatar"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/circle_shape"
        android:scaleType="centerInside"
        android:src="@drawable/ic_avatar_default"/>

    <TextView
        android:id="@+id/no_group_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_padding_vertical"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1.15"
        android:text="@string/no_group_des"
        android:textAppearance="@style/TextAppearance.Medium.White"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_inner_padding_vertical_small"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1.15"
        android:text="@string/no_group_des_plus"
        android:textAppearance="@style/TextAppearance.Medium.White"/>

    <android.support.v7.widget.CardView
        android:id="@id/action_add_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_padding_vertical"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/layout_padding_vertical"
            android:paddingTop="@dimen/layout_padding_vertical"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_padding_vertical"
                android:text="@string/add_group_des"
                android:textAppearance="@style/TextAppearance.Medium"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>